Bootstrap Layout-Grid

--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
 
 <body class="container"><!--  Bootstrap 반응형 -->
     <h1>WEB</h1>
-        <ul>
+    <div class="row">
+        <ul class = "col">
             <li>html</li>
             <li>css</li>
             <li>javascript</li>
         </ul>
-        <article>
+        <article class="col">
             <h2>Welcome</h2>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident suscipit sequi adipisci officia sunt
             laudantium facilis, sed ad ut minima, cupiditate enim minus necessitatibus totam delectus recusandae aperiam
@@ -37,6 +38,7 @@
             </div>
                 <input type="button" class="btn btn-danger" value ="Delete">
         </article>
+    </div>
 
             <!-- Optional JavaScript; choose one of the two! -->
 
