--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 <body class="container"><!--  Bootstrap 반응형 -->
     <h1>WEB</h1>
     <div class="row">
-        <ul class = "col">
+        <ul class = "col-sm-2">
             <li>html</li>
             <li>css</li>
             <li>javascript</li>
         </ul>
-        <article class="col">
+        <article class="col-sm-10">
             <h2>Welcome</h2>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident suscipit sequi adipisci officia sunt
             laudantium facilis, sed ad ut minima, cupiditate enim minus necessitatibus totam delectus recusandae aperiam
